src/objects/Apttus_Config2__ProductAttributeGroup__c.object
<CustomObject>
    <description>Represents a product attribute group that contains attributes shared by products</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AttributeValueMatrixId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Value Matrix</label>
        <referenceTo>Apttus_Config2__AttributeValueMatrix__c</referenceTo>
        <relationshipLabel>Product Attribute Groups</relationshipLabel>
        <relationshipName>ProductAttributeGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BusinessObject__c</fullName>
        <description>The business object which holds the product attributes</description>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus_Config2__ProductAttributeValue__c</fullName>
                    <default>true</default>
                    <label>Apttus_Config2__ProductAttributeValue__c</label>
                </value>
                <value>
                    <fullName>Apttus_Config2__SearchAttributeValue__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the product attribute group</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ThreeColumnAttributeDisplay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if you would like to display the attribute details in this group in a three-column fashion. If unchecked the default is one column.</description>
        <inlineHelpText>Check if you would like to display the attribute details in this group in a three-column fashion. If unchecked the default is one column.</inlineHelpText>
        <label>Three Column Attribute Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TwoColumnAttributeDisplay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if you would like to display the attribute details in this group in a two-column fashion. If unchecked the default is one column.</description>
        <inlineHelpText>Check if you would like to display the attribute details in this group in a two-column fashion. If unchecked the default is one column.</inlineHelpText>
        <label>Two Column Attribute Display</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Attribute Group</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__Description__c</columns>
        <columns>Apttus_Config2__BusinessObject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apttus_Config2__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Attribute Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>